--- a/quotes.html
+++ b/quotes.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="./assets/css/quotes.css">
+	<title>Zitat</title>
 </head>
 
 <body>
-
 	<div>
 		<h1>Zitat des Tages</h1>
 		<p>Drücken Sie die Taste unten, um ein zufälliges Angebot zu erhalten!</p>
@@ -21,6 +24,7 @@
 	</div>
 
 	<script src="./assets/js/quotes.js"> </script>
+
 
 </body>
 
